add_executable(random_dist_test ../random/acorn.c ../random/acorn.h ../random/random_dist_test.c ../mem/jalloc.c ../mem/jalloc.h ../err/error_stack.c ../err/error_stack.h ../err/error_codes.c ../err/error_codes.h ../common/common.c ../random/msws.c ../random/msws.h)
target_link_libraries(random_dist_test PRIVATE m)
add_test(NAME random_distribution_test COMMAND random_dist_test)
add_executable(test_log ../random/approx_ln.c)
target_link_libraries(test_log PRIVATE m)